crates/ars-components/src/layout/snapshots/ars_components__layout__splitter__tests__splitter_handle_idle.snap
---
source: crates/ars-components/src/layout/splitter.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).handle_attrs(0))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-handle-index",
            ),
            String(
                "0",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "handle",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "splitter",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "idle",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Resize",
            ),
        ),
        (
            Aria(
                Orientation,
            ),
            String(
                "vertical",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "90",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "10",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "50",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "50%",
            ),
        ),
        (
            Aria(
                Controls,
            ),
            String(
                "split-panel-0",
            ),
        ),
        (
            Role,
            String(
                "separator",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
