crates/ars-components/src/layout/snapshots/ars_components__layout__splitter__tests__splitter_panel_collapsed.snap
---
source: crates/ars-components/src/layout/splitter.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).panel_attrs(0))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-collapsed",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-panel-id",
            ),
            String(
                "left",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "panel",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "splitter",
            ),
        ),
        (
            Id,
            String(
                "split-panel-0",
            ),
        ),
    ],
    styles: [
        (
            Width,
            "0%",
        ),
    ],
}
